@@ -1,0 +1,5 @@
+# generated_by='OpenQuake engine 3.6.0-git30006b8248', start_date='2019-06-11T07:22:30', checksum=1745828580, kind='rlz-000', risk_investigation_time=1.0
+annual_frequency_of_exceedence,return_period,loss_type,loss_value,loss_ratio
+2.00000E-02,50,structural,2.67559E+02,2.67559E-02
+1.00000E-02,100,structural,6.24306E+02,6.24306E-02
+5.00000E-03,200,structural,8.08982E+02,8.08982E-02
